# pfm

./: .env.example  .gitignore  LICENSE  README.md  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/api/copilotkit/: route.ts
backend/: agent.py  banking_store.py  env_loader.py  main.py  pyproject.toml  server.py
scripts/: dev.ps1
