[project]
name = "backend"
version = "0.1.0"
description = "PFM Generative UI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ag-ui-langgraph>=0.0.28",
    "copilotkit>=0.1.83",
    "fastapi>=0.121.1",
    "langchain-openai>=1.1.12",
    "langgraph>=1.0.2",
    "uvicorn>=0.42.0",
]

